# zetareticuli

./: Cargo.toml  README.md  zero_point.rs
src/: upsertstream.rs
src/api/controllers/: pipeline.rs  product_controller.rs  semantic_search_controller.rs
src/api/middleware/: actor.rs  query_graph.rs
src/api/routes/: training.rs
src/database/pipeline/: bob.rs  lattice.rs  sheetoverlay.rs
src/database/src/: lattice.rs  sheetoverlay.rs
src/middlewares/: chunks.rs  tree.rs
src/routes/: conjoining.rs
